[package]
name = "mon_avg_bal_aggr"
version = "1.0.4632"
authors = ["Bhargavi052 <bhargavi.n@surya-soft.com>"]

[dependencies]
rbdate = { path = "../../hdfc/libraries/RBDate" }
sdb_io = { path = "../../hdfc/libraries/sdb_io" }
health_report = { path = "../../hdfc/libraries/health_report" }
csv = "1.1.1"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = "1.0.104"
serde_derive = "1.0.104"
calamine = "0.24.0"
clap = "2.31.2"
slog-term = "2.4.0"
slog-async = "2.3.0"
chrono = "0.4"
slog = { version = "2.2.3", features = ["max_level_trace", "release_max_level_trace"] }
