[package]
name = "consolidator"
version = "1.0.4908"
authors = ["shashank676 <shashank.p@surya-soft.com>"]

[dependencies]
slog = { version = "2.2.3", features = ["max_level_trace", "release_max_level_trace"] }
slog-term = "2.4.0"
slog-async = "2.3.0"
rbdate = { path = "../../hdfc/libraries/RBDate" }
sdb_io = { path = "../../hdfc/libraries/sdb_io"}
clap = "2.31.2"
chrono = "0.4"
