[package]
name = "lrst_hc"
version = "1.0.0"
authors = ["shashank.676 <shashank.p@surya-soft.com>"]

[dependencies]
clap = "2.31.2"
slog-term = "2.4.0"
slog-async = "2.3.0"
slog = { version = "2.2.3", features = ["max_level_trace", "release_max_level_trace"] }
rbdate = { path = "../../hdfc/libraries/RBDate" }
sdb_dyn_proto_rdr = { path = "../../hdfc/libraries/sdb_dyn_proto_rdr" }
sdb_agg_rules_txt = { path = "../../surya/libraries/sdb_agg_rules_txt" }
sdb_io = { path = "../../hdfc/libraries/sdb_io" }
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
dbpool = { path = "../../surya/libraries/dbpool" }
r2d2 = { path = "../../surya/libraries/r2d2" }
oracle = { version = "0.2.1", features = ["chrono"] }
