[package]
name = "pp_contractual_outflow"
version = "1.1.2892"
authors = ["Saurabh Singh <saurabh.s@surya-soft.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slog = { version = "2.7.0", features = ["max_level_trace", "release_max_level_trace"] }
slog-term = "2.9.0"
slog-async = "2.7.0"
rbdate = { path = "../../../hdfc/libraries/RBDate" }
sdb_io = { path = "../../../hdfc/libraries/sdb_io" }
health_report = { path = "../../../hdfc/libraries/health_report" }
clap = "3.1.18"
chrono = "0.4"
calamine = "0.18.0"
