[package]
name = "cf_dlod"
version = "1.0.4577"
authors = ["Bhargavi052 bhargavi.n@surya-soft.com>"]

[dependencies]
clap = "2.32.0"
rbdate = { path = "../../../hdfc/libraries/RBDate" }
sdb_io = { path = "../../../hdfc/libraries/sdb_io" }
health_report = { path = "../../../hdfc/libraries/health_report" }
protobuf = { version = "2.15.0", features = ["with-bytes"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
slog = { version = "2.2.3", features = ["max_level_trace", "release_max_level_trace"] }
slog-term = "2.4.0"
slog-async = "2.3.0"
chrono = "0.4.11"
hashbrown = "0.12.1"
