[package]
name = "hqla_aggregator"
version = "1.2.2749"
authors = ["NPunyashree <punyashree.n@surya-soft.com>"]

[dependencies]
clap = "2.31.2"
sdb_dyn_proto_rdr = { path = "../../../hdfc/libraries/sdb_dyn_proto_rdr" }
sdb_agg_rules = { path = "../../../hdfc/libraries/sdb_agg_rules" }
rbdate = { path = "../../../hdfc/libraries/RBDate" }
sdb_io = { path = "../../../hdfc/libraries/sdb_io" }
sdb_day_convention = { path = "../../../hdfc/libraries/sdb_day_convention" }
health_report = { path = "../../../hdfc/libraries/health_report" }
slog-term = "2.4.0"
slog-async = "2.3.0"
slog = { version = "2.2.3", features = ["max_level_trace", "release_max_level_trace"] }
chrono = "0.4"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
float-cmp = "0.4.0"
