[package]
name = "cf_to_cf"
version = "1.0.1"
authors = ["Tanuj Singh Rathore <tanuj.s@surya-soft.com> "]

[dependencies]
clap = "3.1.18"
calamine = "0.18.0"
rbdate = { path = "../../../hdfc/libraries/RBDate" }
sdb_io = { path = "../../../hdfc/libraries/sdb_io" }
health_report = { path = "../../../hdfc/libraries/health_report" }
rbconcurrency = { path = "../../../hdfc/libraries/RBConcurrency" }
sdb_dyn_proto_rdr = { path = "../../../hdfc/libraries/sdb_dyn_proto_rdr" }
sdb_day_convention = { path = "../../../hdfc/libraries/sdb_day_convention" }

serde_derive = "1.0"
slog = { version = "2.7.0", features = ["max_level_trace", "release_max_level_trace"] }
slog-term = "2.9.0"
slog-async = "2.7.0"
serde = "1.0"
serde_json = "1.0"
protobuf = "3.1.0"
protobuf-parse = "3.1.0"
tempfile = "3"