[package]
name = "cf_loan_finacle"
version = "0.1.2921"
authors = ["NPunyashree <punyashree.n@surya-soft.com>"]

[dependencies]
clap = "2.31.2"
slog = { version = "2.2.3", features = ["max_level_trace", "release_max_level_trace"] }
slog-term = "2.4.0"
slog-async = "2.3.0"
chrono = "0.4"
rbconcurrency = { path = "../../../hdfc/libraries/RBConcurrency" }
rbdate = { path = "../../../hdfc/libraries/RBDate" }
sdb_day_convention = { path = "../../../hdfc/libraries/sdb_day_convention" }
sdb_io = { path = "../../../hdfc/libraries/sdb_io" }
health_report = { path = "../../../hdfc/libraries/health_report" }
protobuf = { version = "2.15.0", features = ["with-bytes"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
