[package]
name = "cf_td_penalty_waiver_v4"
version = "1.0.4995"
authors = ["Tanuj Singh Rathore <tanuuj.s@surya-soft.com>"]

[dependencies]
clap = "2.31.2"
chrono = "0.4"
slog-term = "2.4.0"
slog-async = "2.3.0"
slog = { version = "2.2.3", features = ["max_level_trace", "release_max_level_trace"] }
rbdate = { path = "../../../hdfc/libraries/RBDate" }
sdb_io = { path = "../../../hdfc/libraries/sdb_io" }
protobuf = { version = "2.15.0", features = ["with-bytes"] }
health_report = { path = "../../../hdfc/libraries/health_report" }