[package]
name = "txt_cf_lst_splitter"
version = "1.0.4365"
authors = ["tanuj Singh <tanuj.s@surya-soft.com>"]

[dependencies]
clap = "3.1.2"
sdb_dyn_proto_rdr = { path = "../../../hdfc/libraries/sdb_dyn_proto_rdr" }
sdb_agg_rules = { path = "../../../surya/libraries/sdb_agg_rules" }
sdb_agg_rules_txt = { path = "../../../surya/libraries/sdb_agg_rules_txt" }
rbdate = { path = "../../../hdfc/libraries/RBDate" }
sdb_io = { path = "../../../hdfc/libraries/sdb_io" }
health_report = { path = "../../../hdfc/libraries/health_report" }
slog-term = "2.4.0"
slog-async = "2.3.0"
slog = { version = "2.2.3", features = ["max_level_trace", "release_max_level_trace"] }
chrono = "0.4.19"
serde = "1.0"
serde_json = "1.0.79"
serde_derive = "1.0.136"
float-cmp = "0.4.0"
