[package]
name = "non_equity_bond"
version = "1.0.4244"
authors = ["Tanuj Singh Rathore <tanuj.s@surya-soft.com>"]

[dependencies]
clap = "2.31.2"
sdb_dyn_proto_rdr = { path = "../../../hdfc/libraries/sdb_dyn_proto_rdr" }
rbdate = { path = "../../../hdfc/libraries/RBDate" }
sdb_agg_rules = { path = "../../../surya/libraries/sdb_agg_rules" }
sdb_io = { path = "../../../hdfc/libraries/sdb_io" }
health_report = { path = "../../../hdfc/libraries/health_report" }
slog-term = "2.4.0"
slog-async = "2.3.0"
slog = { version = "2.2.3", features = ["max_level_trace", "release_max_level_trace"] }
chrono = "0.4"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
transpose = "0.2.2"