[package]
name = "pp_loan_finnone"
version = "1.0.4862"
authors = ["NPunyashree <punyashree.n@surya-soft.com>"]

[dependencies]
clap = "2.31.2"
slog-term = "2.4.0"
slog-async = "2.3.0"
slog = { version = "2.2.3", features = ["max_level_trace", "release_max_level_trace"] }
chrono = "0.4.20"

# This rbdate library path is relative so this might be needed to change as per config
rbdate = { path = "../../../hdfc/libraries/RBDate" }
sdb_io = { path = "../../../hdfc/libraries/sdb_io" }
health_report = { path = "../../../hdfc/libraries/health_report" }
