[package]
name = "pp_lst_filemerger"
version = "1.0.4149"
authors = ["NPunyashree <punyashree.n@surya-soft.com>"]

[dependencies]
slog = { version = "2.7.0", features = ["max_level_trace", "release_max_level_trace"] }
slog-term = "2.9.0"
slog-async = "2.7.0"
rbdate = { path = "../../../hdfc/libraries/RBDate" }
sdb_io = { path = "../../../hdfc/libraries/sdb_io" }
health_report = { path = "../../../hdfc/libraries/health_report" }
clap = "3.2.17"
calamine = "0.16.2"