cargo-features = ["edition2021"]

[package]
name = "cf_borr"
version = "1.0.4166"
authors = ["Bhargavi052 <bhargavi.n@surya-soft.com>"]
edition = "2021"

[dependencies]
protobuf = "3.1.0"
protobuf-parse = "3.1.0"
rbdate = { path = "../../../hdfc/libraries/RBDate" }
tempfile = "3"
slog = { version = "2.7.0", features = ["max_level_trace", "release_max_level_trace"] }
slog-term = "2.9.0"
slog-async = "2.7.0"
sdb_io = { path = "../../../hdfc/libraries/sdb_io" }
health_report = { path = "../../../hdfc/libraries/health_report" }
clap = "3.1.18"
calamine = "0.18.0"
chrono = "0.4.10"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
sdb_util = { path = "../../../surya/libraries/sdb_util"}
sdb_dyn_proto_rdr = { path = "../../../hdfc/libraries/sdb_dyn_proto_rdr" }
