[package]
name = "pp-amb"
version = "1.0.0"
authors = ["Bhargavi052 <bhargavi.n@surya-soft.com>"]

[dependencies]
clap = "2.31.2"
protobuf = {version = "~2.0", features = ["with-bytes"]}
slog-term = "2.4.0"
slog-async = "2.3.0"
slog = { version = "2.2.3", features = ["max_level_trace", "release_max_level_trace"] }
chrono = "0.4.0"
rbdate = { path = "../../../hdfc/libraries/RBDate" }
sdb_io = { path = "../../../hdfc/libraries/sdb_io" }
csv = "1.1.1"
serde = "1.0.98"
serde_derive = "1.0.98"