[package]
name = "pp_blr05_equity"
version = "1.0.1"
authors = ["Pawan Jenu <pawan.j@surya-soft.com>"]

[dependencies]
slog = { version = "2.5.2", features = ["max_level_trace", "release_max_level_trace"] }
slog-term = "2.4.2"
slog-async = "2.3.0"
rbdate = { path = "../../../hdfc/libraries/RBDate" }
sdb_io = { path = "../../../hdfc/libraries/sdb_io" }
clap = "2.33.0"
chrono = "0.4.10"
health_report = { path = "../../../hdfc/libraries/health_report" }
csv = "1.1.1"
serde_derive = "1.0.104"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.56"
calamine = "0.16.1"
math = "0.8.7"
