[package]
name = "pp_npa"
version = "1.2.1"
authors = ["Tarun Jaiswal <tarun.j@surya-soft.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slog = { version = "2.5.2", features = ["max_level_trace", "release_max_level_trace"] }
slog-term = "2.4.2"
slog-async = "2.3.0"
rbdate = { path = "../../../hdfc/libraries/RBDate" }
sdb_io = { path = "../../../hdfc/libraries/sdb_io" }
clap = "2.33.0"
chrono = "0.4.10"
csv = "1.1.1"
serde = "1.0.104"
serde_derive = "1.0.104"
health_report = { path = "../../../hdfc/libraries/health_report" }
calamine = "0.16.1"
